--- a/SisMaper/Views/MainWindow.xaml
+++ b/SisMaper/Views/MainWindow.xaml
@@ -9,6 +9,7 @@
     xmlns:icons="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:local="clr-namespace:SisMaper.Views"
     xmlns:vm="clr-namespace:SisMaper.ViewModel"
+    xmlns:sismaper="clr-namespace:SisMaper"
     xmlns:iconPacks="clr-namespace:MahApps.Metro.IconPacks;assembly=MahApps.Metro.IconPacks.Material"
     xmlns:converter="clr-namespace:MahApps.Metro.IconPacks.Converter;assembly=MahApps.Metro.IconPacks.Core"
     mc:Ignorable="d"
@@ -16,7 +17,7 @@
     Title="SisMaper"
     TitleForeground="{DynamicResource SisMaper.Dark.Theme}"
     Height="728"
-    Width="1366"
+    Width="1489"
     SaveWindowPosition="True"
     >
     <mah:MetroWindow.DataContext>
@@ -36,9 +37,7 @@
     </mah:MetroWindow.TitleTemplate>
     <mah:MetroWindow.Resources>
 
-        <SolidColorBrush
-            x:Key="TabItemForegroundIsSelectedBrush"
-            Color="#FF606060" />
+
         <SolidColorBrush
             x:Key="TabItemBackgroundIsSelectedBrush"
             Color="#FFC0C0C0" />
@@ -48,125 +47,6 @@
             <Setter
                 Property="OpacityMask"
                 Value="#80000000" />
-        </Style>
-        <Style
-            x:Key="MainWindow.TabItem.Menu"
-            BasedOn="{StaticResource MahApps.Styles.TabItem}"
-            TargetType="{x:Type TabItem}">
-            <Setter
-                Property="HorizontalAlignment"
-                Value="Center" />
-            <Setter
-                Property="VerticalAlignment"
-                Value="Center" />
-            <Setter
-                Property="Padding"
-                Value="5,20,5,20" />
-            <Setter
-                Property="Width"
-                Value="110" />
-            <Setter
-                Property="Height"
-                Value="90" />
-            <Style.Triggers>
-                <Trigger
-                    Property="IsSelected"
-                    Value="True">
-                    <Setter
-                        Property="Background"
-                        Value="{DynamicResource TabItemBackgroundIsSelectedBrush}" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-        <Style
-            x:Key="Tab2"
-            BasedOn="{StaticResource MahApps.Styles.TabItem}"
-            TargetType="{x:Type TabItem}">
-            <Setter
-                Property="HorizontalAlignment"
-                Value="Center" />
-            <Setter
-                Property="VerticalAlignment"
-                Value="Center" />
-            <Setter
-                Property="Padding"
-                Value="20,0" />
-            <Setter
-                Property="Width"
-                Value="110" />
-            <Setter
-                Property="Height"
-                Value="70" />
-            <Setter
-                Property="Margin"
-                Value="5" />
-            <Style.Triggers>
-                <Trigger
-                    Property="IsSelected"
-                    Value="True">
-                    <Setter
-                        Property="Background"
-                        Value="{DynamicResource TabItemBackgroundIsSelectedBrush}" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-        <Style
-            x:Key="Head2"
-            TargetType="{x:Type TextBlock}"
-            BasedOn="{StaticResource MahApps.Styles.TextBlock}">
-            <Setter
-                Property="TextWrapping"
-                Value="NoWrap" />
-            <Setter
-                Property="TextTrimming"
-                Value="None" />
-            <Setter
-                Property="FontSize"
-                Value="16" />
-            <Setter
-                Property="HorizontalAlignment"
-                Value="Center" />
-            <Setter
-                Property="VerticalAlignment"
-                Value="Center" />
-            <Setter
-                Property="Foreground"
-                Value="Black" />
-        </Style>
-        <Style
-            x:Key="Head1"
-            TargetType="{x:Type TextBlock}"
-            BasedOn="{StaticResource MahApps.Styles.TextBlock}">
-            <Setter
-                Property="TextWrapping"
-                Value="NoWrap" />
-            <Setter
-                Property="TextTrimming"
-                Value="None" />
-            <Setter
-                Property="FontSize"
-                Value="16" />
-            <Setter
-                Property="HorizontalAlignment"
-                Value="Center" />
-            <Setter
-                Property="VerticalAlignment"
-                Value="Center" />
-            <Setter
-                Property="Foreground"
-                Value="Black" />
-            <Style.Triggers>
-                <MultiDataTrigger>
-                    <MultiDataTrigger.Conditions>
-                        <Condition
-                            Binding="{Binding IsMouseOver, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type TabItem}}}"
-                            Value="True" />
-                    </MultiDataTrigger.Conditions>
-                    <Setter
-                        Property="Foreground"
-                        Value="{DynamicResource TabItemForegroundIsSelectedBrush}" />
-                </MultiDataTrigger>
-            </Style.Triggers>
         </Style>
 
         <ControlTemplate
@@ -694,7 +574,7 @@
             Margin="0,0,0,22" SelectedIndex="0">
             <TabItem
                 x:Name="Vendas"
-                Style="{DynamicResource MainWindow.TabItem.Menu}"
+                Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}"
                 Foreground="#FF1B4441">
                 <TabItem.HeaderTemplate>
                     <ItemContainerTemplate>
@@ -705,7 +585,7 @@
                                 Style="{DynamicResource MenuPackIconMaterial}"
                                 Kind="PointOfSale" />
                             <TextBlock
-                                Style="{DynamicResource Head1}"
+                                Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                 Text="Vendas" />
                         </StackPanel>
                     </ItemContainerTemplate>
@@ -718,7 +598,7 @@
             </TabItem>
             <TabItem
                 x:Name="Recebimento"
-                Style="{DynamicResource MainWindow.TabItem.Menu}"
+                Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}"
                 Foreground="#FF117200">
                 <TabItem.HeaderTemplate>
                     <ItemContainerTemplate>
@@ -729,7 +609,7 @@
                                 Style="{DynamicResource MenuPackIconMaterial}"
                                 Kind="CashMultiple" />
                             <TextBlock
-                                Style="{DynamicResource Head1}"
+                                Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                 Text="{Binding Name, RelativeSource={RelativeSource FindAncestor, AncestorLevel=1, AncestorType={x:Type TabItem}}}" />
                         </StackPanel>
                     </ItemContainerTemplate>
@@ -742,7 +622,7 @@
                             x:Name="RecebimentosView" />
             </TabItem>
             <TabItem
-                Style="{DynamicResource MainWindow.TabItem.Menu}"
+                Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}"
                 Foreground="#FF843700">
                 <TabItem.HeaderTemplate>
                     <ItemContainerTemplate>
@@ -753,7 +633,7 @@
                                 Style="{DynamicResource MenuPackIconMaterial}"
                                 Kind="BookEdit" />
                             <TextBlock
-                                Style="{DynamicResource Head1}"
+                                Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                 Text="Cadastros" />
                         </StackPanel>
                     </ItemContainerTemplate>
@@ -762,7 +642,7 @@
                     Margin="0">
                     <TabItem
                         Name="Produtos"
-                        Style="{DynamicResource Tab2}">
+                        Style="{DynamicResource SisMaper.MainWindow.TabItem.SubMenu}">
                         <TabItem.HeaderTemplate>
                             <ItemContainerTemplate>
                                 <StackPanel
@@ -772,7 +652,7 @@
                                         Style="{DynamicResource MenuPackIconOcticons}"
                                         Kind="Package" />
                                     <TextBlock
-                                        Style="{DynamicResource Head1}"
+                                        Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                         Text="{Binding Name, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type TabItem}}}" />
                                 </StackPanel>
                             </ItemContainerTemplate>
@@ -786,7 +666,7 @@
                     </TabItem>
                     <TabItem
                         x:Name="Clientes"
-                        Style="{DynamicResource Tab2}">
+                        Style="{DynamicResource SisMaper.MainWindow.TabItem.SubMenu}">
                         <TabItem.HeaderTemplate>
                             <ItemContainerTemplate>
                                 <StackPanel
@@ -796,7 +676,7 @@
                                         Style="{DynamicResource MenuPackIconMaterial}"
                                         Kind="AccountMultiple" />
                                     <TextBlock
-                                        Style="{DynamicResource Head1}"
+                                        Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                         Text="{Binding Name, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type TabItem}}}" />
                                 </StackPanel>
                             </ItemContainerTemplate>
@@ -810,7 +690,7 @@
                     </TabItem>
                     <TabItem
                         x:Name="Usuários"
-                        Style="{DynamicResource Tab2}">
+                        Style="{DynamicResource SisMaper.MainWindow.TabItem.SubMenu}">
                         <TabItem.HeaderTemplate>
                             <ItemContainerTemplate>
                                 <StackPanel
@@ -820,7 +700,7 @@
                                         Style="{DynamicResource MenuPackIconMaterial}"
                                         Kind="AccountLock" />
                                     <TextBlock
-                                        Style="{DynamicResource Head1}"
+                                        Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                         Text="{Binding Name, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type TabItem}}}" />
                                 </StackPanel>
                             </ItemContainerTemplate>
@@ -830,7 +710,7 @@
                 </TabControl>
             </TabItem>
             <TabItem
-                Style="{DynamicResource MainWindow.TabItem.Menu}"
+                Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}"
                 Foreground="#CC25A0FF">
                 <TabItem.HeaderTemplate>
                     <ItemContainerTemplate>
@@ -841,7 +721,7 @@
                                 Style="{DynamicResource MenuPackIconModern}"
                                 Kind="GraphBar" />
                             <TextBlock
-                                Style="{DynamicResource Head1}"
+                                Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                 Text="Relatórios" />
                         </StackPanel>
                     </ItemContainerTemplate>
@@ -850,7 +730,7 @@
             <TabItem
                 x:Name="Configuações"
                 PreviewMouseLeftButtonDown="OpenConfig"
-                Style="{DynamicResource MainWindow.TabItem.Menu}">
+                Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}">
                 <TabItem.HeaderTemplate>
                     <ItemContainerTemplate>
                         <StackPanel
@@ -860,7 +740,7 @@
                                 Style="{DynamicResource MenuPackIconModern}"
                                 Kind="Settings" />
                             <TextBlock
-                                Style="{DynamicResource Head1}"
+                                Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                 Text="{Binding Name, RelativeSource={RelativeSource FindAncestor, AncestorLevel=1, AncestorType={x:Type TabItem}}}" />
                         </StackPanel>
                     </ItemContainerTemplate>
@@ -871,26 +751,31 @@
 
         <StatusBar
             DockPanel.Dock="Bottom"
-            VerticalAlignment="Bottom">
+            VerticalAlignment="Bottom" Background="{DynamicResource SisMaper.Dark.Theme}">
             <StatusBarItem
-                Background="{DynamicResource SisMaper.Dark.Theme}">
-                <Grid>
-                    <Button
-                        Style="{DynamicResource MahApps.Styles.Button.WindowCommands}"
-                        Content="Status"
-                        Margin="1209,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                 HorizontalAlignment="Right">
+                <StackPanel Orientation="Horizontal">
                     <Label
-                        Content="Versão: 1.1.0"
-                        HorizontalAlignment="Right"
-                        Margin="1262,0,0,0"
-                        VerticalAlignment="Bottom"
+                        Content="{Binding Source={x:Static sismaper:Main.Version}}"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
                         Height="16"
                         Width="92"
                         Padding="0,0,0,0"
                         Foreground="White"
                         FlowDirection="RightToLeft"
                         FontSize="11" />
-                </Grid>
+                    <Label
+                        Content="{Binding Status, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Height="16"
+                        Width="92"
+                        Padding="0,0,0,0"
+                        Foreground="White"
+                        FlowDirection="RightToLeft"
+                        FontSize="11" />
+                </StackPanel>
             </StatusBarItem>
 
         </StatusBar>
