--- a/SisMaper/Views/ViewConfiguracoes.xaml
+++ b/SisMaper/Views/ViewConfiguracoes.xaml
@@ -96,21 +96,21 @@
             Width="196" Height="30" />
 
         <Button
-            Style="{DynamicResource OptionsButtonStyle}"
+            Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
             Content="Salvar"
             PreviewMouseLeftButtonDown="Salvar"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
             Margin="0,0,31,25" Width="75" />
         <Button
-            Style="{DynamicResource OptionsButtonStyle}"
+            Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
             Content="Atualizar NCMs"
             PreviewMouseLeftButtonDown="AtualizarNCMs"
             HorizontalAlignment="Right"
             VerticalAlignment="Top"
             Margin="0,10,31,0" Width="123"/>
         <Button
-            Style="{DynamicResource OptionsButtonStyle}"
+            Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
             Content="Importar PEM"
             PreviewMouseLeftButtonDown="ImportPem"
             HorizontalAlignment="Right"
