--- a/SisMaper/Views/ViewClientes.xaml
+++ b/SisMaper/Views/ViewClientes.xaml
@@ -445,7 +445,7 @@
                           ColumnWidth="*" ItemsSource="{Binding PessoaFisicaList}" AutoGenerateColumns="False"
                           CanUserAddRows="False" IsReadOnly="True" Margin="0,10,0,24"
                           SelectionMode="Single"
-                          SelectedItem="{Binding ClienteSelecionado, Mode=TwoWay}">
+                          SelectedItem="{Binding ClienteSelecionado, Mode=OneWayToSource}">
                             
                             <DataGrid.Columns>
                                 <DataGridTextColumn
