--- a/SisMaper/Views/ViewParcela.xaml
+++ b/SisMaper/Views/ViewParcela.xaml
@@ -206,10 +206,27 @@
 
             <Separator Margin="10,10,10,0"/>
 
-            <Separator Margin="20, 60, 0, 0" Width="200" HorizontalAlignment="Left" Background="black"/>
-            <TextBlock Language="pt-br" Text="Recebimento" FontSize="28" Margin="20, 0, 0, 0" Width="200" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <Separator Margin="20, 0, 0, 0" Width="200" HorizontalAlignment="Left" Background="black"/>
+            <StackPanel Orientation="Horizontal" Margin="0, 60, 0, 0">
+                <StackPanel>
+                    <Separator Margin="20, 0, 0, 0" Width="200" HorizontalAlignment="Left" Background="black"/>
+                    <TextBlock Language="pt-br" Text="Recebimento" FontSize="28" Margin="20, 0, 0, 0" Width="200" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    <Separator Margin="20, 0, 0, 0" Width="200" HorizontalAlignment="Left" Background="black"/>
+                </StackPanel>
+                <Button 
+                    Style="{DynamicResource OptionsButtonStyle}" 
+                    Height="50"
+                    FontSize="16"
+                    HorizontalAlignment="Left"
+                    Margin="115,0,0,0"
+                    CommandParameter="{Binding}"
+                    Command="{Binding Confirmar}">
+                    <Button.Content>
+                        <TextBlock>Confirmar<LineBreak/> Recebimento</TextBlock>
+                    </Button.Content>
 
+                </Button>
+
+            </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
                 <TextBlock Language="pt-br" Text="Moeda" FontSize="22" Margin="20, 20, 0, 0" Width="200" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                 <TextBox  Style="{DynamicResource TextBoxStyle1}" BorderThickness="2" Language="pt-br"
@@ -269,26 +286,13 @@
             </StackPanel>
             
             <StackPanel Orientation="Horizontal" Margin="0,40,0,0">
-                <Button 
-                    Style="{DynamicResource OptionsButtonStyle}" 
-                    Height="50"
-                    FontSize="16"
-                    HorizontalAlignment="Left"
-                    Margin="20,0,0,0"
-                    CommandParameter="{Binding}"
-                    Command="{Binding Confirmar}">
-                    <Button.Content>
-                        <TextBlock>Confirmar<LineBreak/> Recebimento</TextBlock>
-                    </Button.Content>
-
-                </Button>
 
                 <Button 
                     Style="{DynamicResource OptionsButtonStyle}" 
                     FontSize="16"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Bottom"
-                    Margin="180,0,0,0"
+                    Margin="20,0,0,0"
                     Content="Salvar"
                     CommandParameter="{Binding}"
                     Command="{Binding Salvar}"/>
@@ -296,9 +300,9 @@
                 <Button 
                     Style="{DynamicResource OptionsButtonStyle}" 
                     FontSize="16"
-                    HorizontalAlignment="Right"
+                    HorizontalAlignment="Left"
                     VerticalAlignment="Bottom"
-                    Margin="20,0,0,0"
+                    Margin="300,0,0,0"
                     Content="Cancelar"
                     PreviewMouseLeftButtonDown="CancelarButton"/>
 
